# HSE_MASTERS_CASE_LLM_CODEGEN

./: .gitignore  LICENSE  README.md  pyproject.toml
case_ai_engine/: cli.py  pyproject.toml
case_ai_engine/engine/: __init__.py  orchestrator.py  planner.py
case_ai_engine/engine/llm/: __init__.py  ollama_client.py
case_ai_engine/engine/metrics/: __init__.py  metrics.py  report.py
case_ai_engine/engine/project/: __init__.py  diff.py  writer.py
case_ai_engine/engine/prompts/: __init__.py  builder.py  generate_file.j2  nl_to_spec.j2  repair_diff.j2  system_rules.j2
case_ai_engine/engine/spec/: __init__.py  loader.py  models.py  validator.py
case_ai_engine/engine/verify/: __init__.py  parsers.py  runner.py
case_ai_engine/examples/: spec_min.yaml
case_ai_engine/tests/: __init__.py  test_llm.py  test_metrics.py  test_orchestrator.py  test_placeholder.py  test_planner.py  test_prompts.py  test_spec.py  test_verify.py  test_web.py
case_ai_engine/web/: __init__.py  app.py
case_ai_engine/web/static/: app.js  index.html  styles.css
codegen/: __init__.py  __main__.py  cli.py
engine/: __init__.py
engine/llm/: __init__.py  client.py
engine/metrics/: __init__.py  collector.py
engine/planner/: __init__.py  planner.py
engine/project/: __init__.py  writer.py
engine/prompts/: __init__.py  templates.py
engine/spec/: __init__.py  loader.py  schema.py
engine/verify/: __init__.py  runner.py
examples/: notes_api.json  todo_api.yaml
outputs/: .gitkeep
tests/: __init__.py  test_metrics.py  test_planner.py  test_project.py  test_prompts.py  test_spec.py  test_verify.py
